# gitman-lite

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  gitman.c
src/: CMakeLists.txt  gitman.c  gitman.h  main.c
